# fiap-app-deploy

./: README.md  api.http  docker-compose-m.yml  docker-compose.yml  setup.sh
this-event-fiap-producer/: Dockerfile  celeryconfig.py  gunicorn.py  pyproject.toml  requirements.txt  run.py
this-event-fiap-producer/api/: __init__.py  config.py  urls.py
this-event-fiap-producer/api/views/: parser.py  view.py
this-event-fiap-producer/tests/http/: POST.http
this-event-fiap-producer/tests/unittest/: test_views.py
this-event-fiap-web/: Dockerfile  README.md  angular.json  karma.conf.js  package.json
this-event-fiap-web/src/: consts.ts  index.html  main.ts
thisevent-fiap-auth-service/: .gitignore  Dockerfile  gunicorn.py  pyproject.toml  requirements.txt  run.py
thisevent-fiap-auth-service/.pytest_cache/v/cache/: lastfailed
thisevent-fiap-auth-service/api/: __init__.py  config.py  urls.py
thisevent-fiap-auth-service/api/interfaces/: api.py
thisevent-fiap-auth-service/api/models/: user.py
thisevent-fiap-auth-service/api/utils/: auth.py  request.py  scripts.py
thisevent-fiap-auth-service/api/views/signin/: parser.py  view.py
thisevent-fiap-auth-service/api/views/token/: parser.py  view.py
thisevent-fiap-auth-service/api/views/users/: view.py
thisevent-fiap-auth-service/tests/.pytest_cache/v/cache/: lastfailed
thisevent-fiap-auth-service/tests/http/: POST.http
thisevent-fiap-auth-service/tests/unit/: base.py  test_user.py
thisevent-fiap-worker/: .gitignore  Dockerfile  celeryconfig.py  pyproject.toml  rabbit.yml  requirements.txt  tasks.py
(+26 files in other folders)
